src/style.css
@font-face {
    font-family: "Roboto";
    font-weight: 400;
    src: url(fonts/roboto-regular-webfont.woff2) format("woff2");
}

@font-face {
    font-family: "Roboto";
    font-weight: 700;
    src: url(fonts/roboto-bold-webfont.woff2) format("woff2");
}

@font-face {
    font-family: "Playfair";
    font-weight: 400;
    src: url(fonts/playfair-display.regular-webfont.woff2) format("woff2");
}

* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

img {
    display: block;
}

.emailBreak {
    display: none;
}

svg {
    height: 40px;
    width: 40px;
}

body {
    min-height: 100svh;
    display: flex;
    flex-direction: column;
    font-family:
        "Roboto",
        system-ui,
        -apple-system,
        BlinkMacSystemFont,
        "Segoe UI",
        Roboto,
        Oxygen,
        Ubuntu,
        Cantarell,
        "Open Sans",
        "Helvetica Neue",
        sans-serif;
}

header::before {
    content: "";
    position: absolute;
    width: 100%;
    height: 700px;
    transform: skewY(-7deg) translateY(-40%);
    background-image: linear-gradient(45deg, #0891b2, #08b255);
    box-shadow: 4px 3px 4px 0px rgba(0, 0, 0, 0.2);
    z-index: -1;
}

footer {
    background-image: linear-gradient(45deg, #0891b2, #08b255);
}

/* header styles */

header {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 3rem;
}

.tabletImg {
    display: none;
}

.tabletText {
    display: none;
}

.aboutMeCard {
    display: flex;
    flex-direction: column;
    padding: 1.75rem 1.5rem;
    gap: 1.25rem;
    background-color: white;
    min-height: 375px;
    max-width: 600px;
    box-shadow: 1px 1px 4px 3px rgba(0, 0, 0, 0.2);
}

.aboutMeCard > h3 {
    font-size: 2.5rem;
    font-weight: 400;
    font-family: "Playfair";
}

.aboutMeCard > p {
    font-size: 1.25rem;
    margin-bottom: 1rem;
}

header > div > img {
    box-shadow: 4px 3px 4px 0px rgba(0, 0, 0, 0.2);
    z-index: 1;
}

.imageContainer {
    position: relative;
}

.imageText {
    position: absolute;
    text-align: center;
    width: 100%;
    bottom: 1%;
    color: white;
    font-size: 3.3rem;
    padding: 0 0.5rem;
    text-wrap: nowrap;
    font-family: "Playfair";
}

.socialLinks {
    display: flex;
    gap: 1rem;
    align-self: flex-end;
}

.socialLinks img {
    width: 35px;
    height: 35px;
}

.imageContainer > img {
    object-fit: cover;
}

/* main content styles */

main {
    display: flex;
    flex-direction: column;
    gap: 16px;
    margin: 3rem 5rem 6rem 5rem;
}

h4 {
    font-size: 2.5rem;
    margin-bottom: -1.5rem;
    font-weight: 400;
    grid-column: 1/4;
    font-family: "Playfair";
}

.projects {
    row-gap: 2rem;
    column-gap: 3rem;
    display: grid;
    grid-template-columns: repeat(3, minmax(300px, 450px));
    justify-content: center;
}

.projectCard {
    box-shadow: 4px 3px 4px 0px rgba(0, 0, 0, 0.22);
    border-radius: 16px;
}

.projectCard > img {
    object-fit: cover;
    width: 100%;
    height: auto;
    border-top-left-radius: 16px;
    border-top-right-radius: 16px;
}

.projectCard-desc {
    display: grid;
    padding: 8px;
    gap: 0.5rem;
    grid-template-columns: 1fr auto;
    grid-template-rows: auto 1fr;
    align-items: center;
    height: 175px;
}

.projectCard-desc p:last-child {
    align-self: start;
    margin-top: 0.5rem;
    grid-column: 1/3;
    margin-bottom: 3rem;
}

.projectCard-desc p:first-child {
    font-size: 1.25rem;
}

.projectCard-links {
    display: flex;
    gap: 0.75rem;
}

.projectCard-links * {
    width: 30px;
    height: 30px;
}

/* footer styles */

footer {
    display: flex;
    padding: 3rem 4rem;
    justify-content: center;
    gap: 2rem;
}

.flex-row {
    display: flex;
    align-items: center;
    gap: 0.5rem;
    margin-bottom: -16px;
}

.footerTextContainer {
    display: flex;
    flex-direction: column;
    gap: 2rem;
    color: white;
    font-size: 1.5rem;
    max-width: 500px;
}

.footerTextContainer > :first-child {
    font-size: 3rem;
    font-family: "Playfair";
}

footer .socialLinks {
    align-self: flex-start;
    margin-top: 16px;
}

footer .socialLinks * {
    width: 50px;
    height: 50px;
}

/* loading screen */

.loader-hidden {
    opacity: 0;
    visibility: hidden;
}

.loader::after {
    content: "";
    width: 75px;
    height: 75px;
    border: 15px solid #dddddd;
    border-top-color: #7449f5;
    border-radius: 50%;
    animation: loading 0.75s linear infinite;
}

@keyframes loading {
    0% {
        transform: rotate(0);
    }
    100% {
        transform: rotate(1turn);
    }
}

/* media queries */

@media screen and (max-width: 1200px) and (min-width: 801px) {
    .projects {
        grid-template-columns: repeat(2, minmax(300px, 450px));
    }
    h4 {
        grid-column: 1/3;
    }

    footer > :last-child > img {
        min-width: 300px;
        max-width: 100%;
    }

    footer {
        align-items: center;
    }

    .tabletImg {
        display: block;
        object-fit: cover;
        object-position: 0px 65%;
        float: left;
        margin-right: 1rem;
    }

    .imageContainer {
        display: none;
    }

    .aboutMeCard {
        padding: 0;
        margin: 0 4rem;
        display: block;
        max-width: 750px;
        background-color: rgba(0, 0, 0, 0);
        box-shadow: none;
    }

    .aboutMeCard p {
        background-color: white;
        margin-left: 3rem;
        padding: 0 2rem;
        padding-top: 1rem;
        padding-bottom: 4.5rem;
        box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.2);
    }

    .aboutMeCard h3 {
        margin-top: 6rem;
        padding-top: 5rem;
        padding-right: 1rem;
        box-shadow: 4px -4px 4px 0px rgba(0, 0, 0, 0.2);
        text-align: center;
        background-color: white;
    }

    .aboutMeCard .socialLinks {
        display: none;
    }

    .tabletText {
        display: block;
        position: absolute;
        text-align: center;
        width: 100%;
        left: calc(3rem + 10%);
        transform: translateY(25%);
        color: white;
        font-size: 3.3rem;
        padding: 0 0.5rem;
        text-wrap: nowrap;
        font-family: "Playfair";
    }
}

@media screen and (max-width: 800px) {
    .projects {
        grid-template-columns: minmax(300px, 500px);
    }
    h4 {
        grid-column: 1/2;
        text-align: center;
        margin-bottom: -12px;
    }

    h3 {
        font-size: 3rem !important;
        margin-top: 1rem;
    }

    .emailBreak {
        display: block;
    }

    header {
        flex-direction: column;
    }

    header p {
        text-align: center;
        font-size: 1.5rem !important;
    }

    .aboutMeCard {
        box-shadow: none;
        align-items: center;
    }

    .socialLinks {
        align-self: center !important;
    }

    header::before {
        transform: skewY(-7deg) translateY(-75%);
    }

    .imageContainer img {
        max-width: 70svw;
        height: 500px;
        object-fit: cover;
    }

    footer {
        flex-direction: column;
        align-items: center;
        text-align: center;
        padding: 0;
        padding-top: 2rem;
    }

    .footerTextContainer {
        padding: 0 2rem;
    }

    .flex-row {
        align-self: center;
    }

    .imageText {
        text-wrap: wrap;
        text-align: start;
    }

    .imgContainer img {
        width: 100svw;
        object-fit: cover;
    }
}

@media screen and (max-height: 700px) {
    .imageContainer img {
        height: 400px;
    }

    header::before {
        transform: skewY(-7deg) translateY(-80%);
    }
}

@media screen and (max-width: 360px) {
    .footerTextContainer {
        padding: 0;
    }
}

/* hover states and animation */

.projectCard:hover {
    transform: translateY(-6px);
}

.projectCard {
    transition: transform 0.2s ease-out;
}

